@@ -1,0 +1,7 @@
+// SPDX-License-Identifier: GPL-2.0-or-later
+// Copyright The Music Player Daemon Project
+
+#include "TableGlue.hxx"
+#include "TableStructure.hxx"
+
+TableStructure song_table_structure;
